# crawl4ai-llm-docs

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  SECURITY.md  claude-code.txt  prompt.txt  pyproject.toml  run_windows.bat  run_wsl.sh  test_chunk_strategy.md  test_single.md  test_single.txt  test_urls.md
PRPs/: application-performance-optimization.md  crawl4ai-llm-docs.md  parallel-processing-spec.md
scripts/: basic_validation.py  comprehensive_validation.py  implementation_manager.py  performance_test.py  simple_validation.py
src/crawl4ai_llm_docs/: __init__.py  __main__.py  cli.py  exceptions.py
src/crawl4ai_llm_docs/config/: manager.py  models.py
src/crawl4ai_llm_docs/core/: adaptive_rate_limiter.py  content_preservation_processor.py  intelligent_chunker.py  optimizer.py  parallel_processor.py  pipeline_coordinator.py  processor.py  progress_tracker.py  rate_limiter.py  scraper.py  session_manager.py
src/crawl4ai_llm_docs/utils/: debug_tools.py  file_handler.py  logger.py
tests/: __init__.py  test_cli.py  test_config.py
tests/fixtures/: sample_urls.txt
