[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crawl4ai-llm-docs"
version = "0.1.0"
description = "Documentation scraping and LLM optimization tool"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Claude AI", email = "noreply@anthropic.com"},
]
keywords = ["cli", "documentation", "scraping", "llm", "markdown"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.0.0",
    "crawl4ai>=0.7.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "platformdirs>=4.0.0",
    "tiktoken>=0.5.0",
    "tenacity>=8.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
crawl4ai-llm-docs = "crawl4ai_llm_docs.cli:main"

[project.entry-points."pipx.run"]
crawl4ai-llm-docs = "crawl4ai_llm_docs.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
crawl4ai_llm_docs = ["py.typed"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = "3.9"
strict = true